Add shitty styling

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -25,11 +25,13 @@
 					<input id="item-name" type="text" />
 				</div>
 				<div class="input-container">
-					<label for="discord-id"> What is your discord ID? </label>
+					<label for="discord-id">What is your discord ID?</label>
 					<input id="discord-id" type="number" />
 				</div>
-				<button class="btn" type="button">Add item</button>
-				<button class="btn" type="submit">Submit</button>
+				<div class="btn-container">
+					<button class="btn btn-add" type="button">Add item</button>
+					<button class="btn btn-submit" type="submit">Submit</button>
+				</div>
 			</form>
 
 			<div class="item-list">
