--- a/webpage/index.html
+++ b/webpage/index.html
@@ -20,17 +20,32 @@
 			<form action="#" method="post">
 				<div class="input-container">
 					<label for="item-name">
-						Which item do you want to track?
+						What is the goods_id of your item?
 					</label>
-					<input id="item-name" type="text" />
+					<input id="item-name" type="text" placeholder="goods_id" />
 				</div>
 				<div class="input-container">
-					<label for="discord-id">What is your discord ID?</label>
-					<input id="discord-id" type="number" />
+					<label for="discord-id">Who are you?</label>
+					<select id="discord-id">
+						<option value="tsitrina">tsitrina</option>
+						<option value="mmmmmmm">mmmmmmm</option>
+						<option value="Durnelis">Durnelis</option>
+						<option value="rok">rok</option>
+						<option value="rokazz">rokazz</option>
+						<option value="Gimzha">Gimzha</option>
+					</select>
 				</div>
 				<div class="btn-container">
-					<button class="btn btn-add" type="button">Add item</button>
-					<button class="btn btn-submit" type="submit">Submit</button>
+					<button class="btn btn-add" id="btn-add" type="button">
+						Add item
+					</button>
+					<button
+						class="btn btn-submit"
+						id="btn-submit"
+						type="button"
+					>
+						Submit
+					</button>
 				</div>
 			</form>
 
