Added notifications when response is successful

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -16,6 +16,8 @@
 	</head>
 	<body>
 		<main>
+			<div class="notification-container"></div>
+
 			<h1>Buff bot</h1>
 			<form action="#" method="post" id="form">
 				<div class="input-container">
