Remove unnecessary button and fix form style

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -51,9 +51,9 @@
 					/>
 				</div>
 				<div class="btn-container">
-					<button class="btn btn-add" id="btn-add" type="button">
+					<!-- <button class="btn btn-add" id="btn-add" type="button">
 						Add item
-					</button>
+					</button> -->
 					<button
 						class="btn btn-submit"
 						id="btn-submit"
@@ -64,11 +64,11 @@
 				</div>
 			</form>
 
-			<div class="item-list">
+			<!-- <div class="item-list">
 				<div id="item-id-container">
 					<div>Goods_id:</div>
 				</div>
-			</div>
+			</div> -->
 		</main>
 	</body>
 </html>
