Small refactor of styling and element naming

--- a/static/index.html
+++ b/static/index.html
@@ -25,7 +25,7 @@
 					<input
 						required
 						id="buff-url"
-						placeholder="https://buff.163.com/market/"
+						placeholder="https://buff.163.com/goods/..."
 					/>
 				</div>
 				<div class="input-container">
@@ -54,20 +54,14 @@
 					<button class="btn btn-add" id="btn-add" type="button">
 						Add item
 					</button>
-					<button
-						class="btn btn-submit"
-						id="btn-submit"
-						type="button"
-					>
+					<button class="btn btn-submit" id="btn-submit" type="button">
 						Submit
 					</button>
 				</div>
 			</form>
 
-			<div class="item-list">
-				<div id="item-id-container">
-					<div>Goods_id:</div>
-				</div>
+			<div id="item-id-container">
+				<div>Items you want to track:</div>
 			</div>
 		</main>
 	</body>
